tests/ingress_example_with_named_port/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello
spec:
  selector:
    app: hello
  ports:
    - name: http
      protocol: TCP
      port: 8080        
      targetPort: http 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  namespace: hello
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-container
        image: gcr.io/shfa/hello-app:1.0
        ports:
        - name: http   
          containerPort: 8080
